# maneki

./: Cargo.toml  LICENSE  steam_app.txt
src/: lib.rs  steam.rs
src/rendering/: mod.rs  model.rs
src/structure/: controller.rs  gameobj.rs  mod.rs  texture.rs
src/structure/objects/: mod.rs  player.rs  scene.rs  skybox.rs
