[package]
name = "maneki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
raylib = "3.7.0"
fbxcel = "0.7.0"
steamworks = "0.9.0"

[dependencies.uuid]
version = "1.1.1"
features = ["v4"]